# OrangeStars

./: .gitignore
exploratorium/aht21_driver/: .cproject  .mxproject  .project  aht21_driver.ioc
exploratorium/aht21_driver/Core/Inc/: aht21.h
exploratorium/aht21_driver/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
exploratorium/aht21_driver_rp2040/: CMakeLists.txt  cmake_install.cmake  tasks.py
exploratorium/aht21_driver_rp2040/src/: main.c
exploratorium/cli_rp2040/: CMakeLists.txt  cmake_install.cmake  tasks.py
exploratorium/cli_rp2040/lib/: console.h  sm.h
exploratorium/cli_rp2040/src/: console.c  main.c
exploratorium/rak4270_rp2040/: CMakeLists.txt  setup_env.sh  tasks.py
exploratorium/rak4270_rp2040/lib/: rak4270.h
exploratorium/rak4270_rp2040/src/: main.c  rak4270.c
exploratorium/uartTest/: .cproject  .mxproject  .project  STM32L475VGTX_FLASH.ld  uartTest.ioc
exploratorium/uartTest/Core/Inc/: main.h
exploratorium/uartTest/Core/Src/: main.c  stm32l4xx_hal_msp.c
exploratorium/ws2812/: CMakeLists.txt  setup_env.sh
exploratorium/ws2812/src/: ws2812.c
final_project/: CMakeLists.txt  README.md
final_project/edge_node/: CMakeLists.txt  setup_env.sh  tasks.py
final_project/edge_node/lib/: aht21.h  circularBuffer.h  console.h  data.h  rak4270.h
final_project/edge_node/src/: circularBuffer.c  consoleIo.c  main.c  rak4270.c  ws2812.c
final_project/exploratorium/aht21_driver/: .cproject  .mxproject  .project  aht21_driver Debug.launch  aht21_driver.ioc
final_project/exploratorium/aht21_driver/Core/Inc/: aht21.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
final_project/exploratorium/aht21_driver/Core/Src/: aht21.c  main.c  stm32l4xx_hal_msp.c
final_project/exploratorium/aht21_driver_rp2040/: CMakeLists.txt
final_project/exploratorium/aht21_driver_rp2040/lib/: aht21.h
final_project/exploratorium/aht21_driver_rp2040/src/: aht21.c  main.c
final_project/exploratorium/rak4270_rp2040/: CMakeLists.txt  cmake_install.cmake
final_project/exploratorium/rak4270_rp2040/lib/: rak4270.h
final_project/exploratorium/rak4270_rp2040/src/: main.c  rak4270.c
final_project/exploratorium/tempSensorTest/: .cproject  .mxproject  .project  tempSensorTest Debug.launch  tempSensorTest.ioc
final_project/exploratorium/tempSensorTest/Core/Inc/: aht21.h  main.h  stm32l4xx_hal_conf.h
final_project/exploratorium/tempSensorTest/Core/Src/: main.c  stm32l4xx_hal_msp.c
final_project/exploratorium/ws2812/: cmake_install.cmake
final_project/exploratorium/ws2812/src/: ws2812.c
final_project/lib/: batteryLevel.h  consoleCommands.h  data.h  rak4270.h  sm.h  version.h  ws2812.h
final_project/src/: batteryLevel.c  circularBuffer.c  consoleCommands.c  main.c  rak4270.c  ws2812.c
final_project/web_interface/: index.html  index.js  style.css
week_1/: exercise1.md
week_1/img/: hardwareDiagram.drawio
week_10/: README.md
week_2/: exercise1.md
week_2/img/: nxpBlockDiagram.drawio  xiaoRP2040.drawio
week_3/: CMakeLists.txt  README.md  cmake_install.cmake
week_3/docs/: week3exercise.md
week_3/rp2040/: CMakeLists.txt  cmake_install.cmake  setup_env.sh  tasks.py
week_3/rp2040/lib/: cli.h
week_3/src/: main.c
week_3/stm32l475/: platformio.ini
week_3/stm32l475/include/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
week_3/stm32l475/src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
week_3/xiao_rp2040/: CMakeLists.txt  cmake_install.cmake  setup_env.sh  tasks.py
week_3/xiao_rp2040/src/: main.c
week_4/: README.md
week_5/stm32l475/: .cproject  .mxproject  .project  stm32l475 Debug.launch  stm32l475.ioc
week_5/stm32l475/Core/Inc/: conioCompat.h  consoleIo.h  main.h  version.h
week_5/stm32l475/Core/Src/: conioCompat.c  consoleIo.c  main.c  stm32l4xx_hal_msp.c
week_5/xiao_rp2040/: CMakeLists.txt  cmake_install.cmake
week_5/xiao_rp2040/lib/: console.h
week_5/xiao_rp2040/src/: console.c  consoleCommands.c  consoleIo.c  main.c
week_6/: README.md  armEmbedded.md  setupPicoSDK.md
week_6/img/: hardwareDiagram.drawio  hierarchyOfControlDiagram.drawio  layeredBlockDiagram.drawio  softwareBlockDiagram.drawio  systemOverview.drawio
week_7/: README.md
week_8/: README.md
week_8/mapFiles/: CMakeLists.txt  cmake_install.cmake  firmware.elf.map  firmware_mod.elf.map  memmap_mod.ld  tasks.py
week_8/mapFiles/src/: main.c
week_9/: README.md
